[package]
name = "thvote-gateway"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
bson = "1.2.2"
actix-web = "3.3"
actix-cors = "0.5"
actix-rt = "2.2.0"
env_logger = "0.8"
serde = { version = "1.0.59", features = ["derive"] }
serde_derive = "1.0.59"
serde_json = { version = "1" }
juniper = { version="0.15.7",features = ["expose-test-schema", "serde_json"] }
juniper_graphql_ws = { version="0.3.0" }
juniper_actix = { version="0.2.5", features = ["subscriptions"] }
extend = "1.1.1"
thiserror = "1.0.26"
tokio = { version = "0.2", features = ["rt-core", "time", "macros"] }
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
jwt-simple = {git = "https://github.com/zyddnys/rust-jwt-simple.git"}
once_cell = "1.8"
pvrustlib = {path = "../pvrustlib"}
